# xenmpm

./: .gitignore  AGENTS.md  CLAUDE.md  Report.md  Report_baseline_rerun_2026-01-01.md  Report_marker_baseline.md  Report_surface_fields_ablation.md  Report_sweep_press1mm.md  quick_test.py  setup.py
.serena/: project.yml
abb/: sensor_calibration_data_process.py  sensor_calibration_data_process_xy.py  sensor_calibration_new.py  sensor_calibration_new_xy.py
calibration/: COLLECTION_FLOW_COMPARISON.md  Function.py  abb_real_data.py  (+14 more)
xengym/mpm/: GRADIENT_DEBUG_NOTES.md  IMPLEMENTATION_STATUS_AUTODIFF.md  IMPLEMENTATION_SUMMARY.md  README.md  TAICHI_AUTODIFF_LIMITATIONS.md  __init__.py  autodiff_wrapper.py  autodiff_wrapper_backup.py  cli.py  config.py  constitutive.py  constitutive_gradient_tests.py  constitutive_gradients.py  contact.py  decomp.py  exceptions.py  fields.py  gradient_mode_tests.py  high_deformation_gradient_tests.py  manual_adjoint.py  manual_adjoint_solver.py  manual_adjoint_tests.py  mpm_solver.py  py.typed  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  stability.py  stress_gradient_tests.py  validation.py
xengym/mpm/examples/: advanced_usage.py  config_friction_demo.json  config_gelslim.json  config_maxwell_demo.json  config_quick_maxwell.json  config_quick_validation.json  manual_adjoint_example.py
xengym/mpm/scripts/: __init__.py  plot_dt_convergence.py  plot_validation.py
xengym/mpm/tests/: __init__.py  conftest.py  test_constitutive_gradients.py  test_gradient_mode.py  test_high_deformation.py  test_manual_adjoint.py  test_stress_gradients.py
(+242 files in other folders)
